[package]
name = "xion-nft"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true


[features]
library = []

[dependencies]
abstract-std = "0.22.2"
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
cw721-base = { version = "0.18.0", path = "../cw721-base", features = ["library"] }
